--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-async": "^10.0.1",
     "react-accessible-accordion": "^3.3.3",
+    "react-aws-s3": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.0",
     "react-icons": "^3.11.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.11",
+    "react-tiny-popover": "^6.0.0-beta.2",
     "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0",
