--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "popover": "^2.4.1",
     "react": "^16.13.1",
     "react-accessible-accordion": "^3.3.3",
-    "react-aws-s3": "^1.3.0",
     "react-async": "^10.0.1",
+    "react-aws-s3": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.0",
     "react-icons": "^3.11.0",
     "react-infinite-scroll-component": "^5.1.0",
+    "react-kakao-login": "^1.2.3",
     "react-popover": "^0.5.10",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
