--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "nginx": "0.0.0",
     "popover": "^2.4.1",
     "react": "^16.13.1",
     "react-accessible-accordion": "^3.3.3",
@@ -32,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "zip": "bestzip bundle.zip build/*",
+    "deploy": "npm run build && npm zip"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "bestzip": "^2.1.7",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2"
